test/invalid/baseline/operation-too-special.txt
Syntax error at line 2 in operation-too-special.widl, since `interface Ako`:
    getter setter void maki()
           ^ Missing return type
